helm-deployment/filebeat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: filebeat
  name: filebeat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebeat
  template:
    metadata:
      labels:
        app: filebeat
    spec:
      containers:
        - args:
            - filebeat
            - -e
            - --strict.perms=false
          image: indamutsa/filebeat:9f6b4724
          name: filebeat
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - mountPath: /usr/share/filebeat/dockerlogs
              name: filebeat-claim0
              readOnly: true
            - mountPath: /var/run/docker.sock
              name: filebeat-claim1
      restartPolicy: OnFailure
      volumes:
        - name: filebeat-claim0
          persistentVolumeClaim:
            claimName: filebeat-claim0
            readOnly: true
        - name: filebeat-claim1
          persistentVolumeClaim:
            claimName: filebeat-claim1
