helm-deployment/setup-rs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: setup-rs
spec:
  replicas: 1
  selector:
    matchLabels:
      service: setup-rs
  strategy: {}
  template:
    metadata:
      labels:
        service: setup-rs
    spec:
      containers:
        - image: indamutsa/setup:30ac4763
          name: setup-rs
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
      restartPolicy: Always
