helm-deployment/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - env:
            - name: ELASTIC_PASSWORD
              value: changeme
            - name: ELASTIC_USERNAME
              value: elastic
            - name: ES_JAVA_OPTS
              value: -Xmx256m -Xms256m
            - name: discovery.type
              value: single-node
          image: indamutsa/elasticsearch:a561f9929afc57d2c4a324e9dda1d7faffc0942d
          livenessProbe:
            exec:
              command:
                - curl --silent --fail http://localhost:9200/_cluster/health || exit 1
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 30
          name: elasticsearch
          ports:
            - containerPort: 9200
            - containerPort: 9300
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: elasticsearch
      restartPolicy: OnFailure
      volumes:
        - name: elasticsearch
          persistentVolumeClaim:
            claimName: elasticsearch


---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch
spec:
  ports:
    - name: "9200"
      port: 9200
      targetPort: 9200
    - name: "9300"
      port: 9300
      targetPort: 9300
  selector:
    app: elasticsearch
status:
  loadBalancer: {}
