helm-deployment/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: logstash
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - env:
            - name: LS_JAVA_OPTS
              value: -Xmx256m -Xms256m
          image: indamutsa/logstash:a561f9929afc57d2c4a324e9dda1d7faffc0942d
          name: logstash
          ports:
            - containerPort: 5044
            - containerPort: 5000
            - containerPort: 5000
              protocol: UDP
            - containerPort: 9600
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
      restartPolicy: OnFailure

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logstash
  name: logstash
spec:
  ports:
    - name: "5044"
      port: 5044
      targetPort: 5044
    - name: "5000"
      port: 5000
      targetPort: 5000
    - name: 5000-udp
      port: 5000
      protocol: UDP
      targetPort: 5000
    - name: "9600"
      port: 9600
      targetPort: 9600
  selector:
    app: logstash
status:
  loadBalancer: {}
