helm-deployment/metrics-calculator-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: metrics-calculator
  name: metrics-calculator
spec:
  containers:
    - env:
        - name: HOST
          value: 0.0.0.0
      image: indamutsa/metrics-calculator:v1.0
      name: metrics-calculator
      ports:
        - containerPort: 8186
      resources:
        # You can specify the required resources here, e.g.
        requests:
          cpu: "250m"
          memory: "64Mi"
        limits:
          cpu: "500m"
          memory: "128Mi"
  restartPolicy: OnFailure
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: metrics-calculator
  name: metrics-calculator
spec:
  ports:
    - name: "8186"
      port: 8186
      targetPort: 8186
  selector:
    app: metrics-calculator
status:
  loadBalancer: {}
