helm-deployment/model-transformation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: model-transformation
  name: model-transformation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-transformation
  template:
    metadata:
      labels:
        app: model-transformation
    spec:
      containers:
        - env:
            - name: HOST
              value: 0.0.0.0
          image: indamutsa/etl-transformation:v1.4
          name: etl-transformation
          ports:
            - containerPort: 8085
          resources: 
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
      restartPolicy: OnFailure

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: model-transformation
  name: model-transformation
spec:
  ports:
    - name: "8085"
      port: 8085
      targetPort: 8085
  selector:
    app: model-transformation
status:
  loadBalancer: {}
