helm-deployment/mongos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    network/advanced-query-search-engine: "true"
    service: mongos1
  name: mongos1
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongos1
  template:
    metadata:
      labels:
        service: mongos1
    spec:
      containers:
        - args:
            - mongos
            - --configdb
            - mongors1conf/mongocfg1:27017,mongocfg2:27017,mongocfg3:27017
            - --port
            - "27017"
            - --bind_ip_all
          image: indamutsa/mongo:9abda9fa
          name: mongos1
          ports:
            - containerPort: 27017
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - mountPath: /home/app/addShards.js
              name: mongos1-claim0
      restartPolicy: Always
      volumes:
        - name: mongos1-claim0
          persistentVolumeClaim:
            claimName: mongos1-claim0

---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mongos1
  name: mongos1
spec:
  ports:
    - name: "27019"
      port: 27019
      targetPort: 27017
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    service: mongos1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    network/advanced-query-search-engine: "true"
    service: mongos2
  name: mongos2
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongos2
  template:
    metadata:
      labels:
        service: mongos2
    spec:
      containers:
        - args:
            - mongos
            - --configdb
            - mongors1conf/mongocfg1:27017,mongocfg2:27017,mongocfg3:27017
            - --port
            - "27017"
            - --bind_ip_all
          image: indamutsa/mongo:9abda9fa
          name: mongos2
          ports:
            - containerPort: 27017
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mongos2
  name: mongos2
spec:
  ports:
    - name: "27020"
      port: 27020
      targetPort: 27017
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    service: mongos2
